--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <h1 style="text-align: center;">CMDs</h1>
     <ul style="list-style:decimal;line-height: 30px;">
         <!-- Firebase Commands -->
-        <li><a href="/Firebase/index.html">Firebase</a></li>
+        <li><a href="./Firebase/index.html">Firebase</a></li>
         <!-- VS Code Commands -->
-        <li><a href="/VS Code/index.html">VS code</a></li>
+        <li><a href="./VS Code/index.html">VS code</a></li>
         <!-- Git Commands -->
-        <li><a href="/Git/index.html">Git</a></li>
+        <li><a href="./Git/index.html">Git</a></li>
     </ul>
     
 </body>
