--- a/Firebase/Issues/1/index.html
+++ b/Firebase/Issues/1/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Running scripts is disabled on this system visual studio code</title>
+    <link rel="shortcut icon" href="./command.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="shortcut icon" href="../../../Source/command.svg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@700&display=swap" rel="stylesheet">
@@ -15,6 +15,7 @@
     <h1 style="text-align: center;"><a href="../index.html" style="text-decoration: none;color: black;font-family: 'Akshar', sans-serif;">CMDs</a></h1>
     <ul style="list-style:decimal;line-height: 50px;">
         <p>Running scripts is disabled on this system visual studio code.</p>
+        <img src="./Running scripts is disabled on this system visual studio code.png" alt="">
         <li><b>Step: 1</b>
             <ul style="list-style:none;line-height: 30px;">
                 <li>set-ExecutionPolicy RemoteSigned -Scope CurrentUser<button style="margin-left: 10px;"><i class="fa fa-clipboard"onclick="CopyText1()"></i></button><i class="fa fa-check" aria-hidden="false" style="margin-left: 10px;visibility:hidden;" id="CopyText1"></i></li>
