--- a/Firebase/Issues/1/index.html
+++ b/Firebase/Issues/1/index.html
@@ -15,7 +15,7 @@
     <h1 style="text-align: center;"><a href="../index.html" style="text-decoration: none;color: black;font-family: 'Akshar', sans-serif;">CMDs</a></h1>
     <ul style="list-style:decimal;line-height: 50px;">
         <p>Running scripts is disabled on this system visual studio code.</p>
-        <img src="./Running scripts is disabled on this system visual studio code.png" alt="">
+        <a href="./Running scripts is disabled on this system visual studio code.png"><img src="./Running scripts is disabled on this system visual studio code.png" alt="" width="400px"></a>
         <li><b>Step: 1</b>
             <ul style="list-style:none;line-height: 30px;">
                 <li>set-ExecutionPolicy RemoteSigned -Scope CurrentUser<button style="margin-left: 10px;"><i class="fa fa-clipboard"onclick="CopyText1()"></i></button><i class="fa fa-check" aria-hidden="false" style="margin-left: 10px;visibility:hidden;" id="CopyText1"></i></li>
