--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Commands</title>
-    <link rel="shortcut icon" href="./Source/command.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="./src/command.svg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@700&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
     <h1 style="text-align: center;font-family: 'Akshar', sans-serif;">CMDs</h1>
     <ul style="list-style:decimal;line-height: 30px;">
         <!-- Firebase Commands -->
-        <li><a href="./Firebase/index.html">Firebase</a></li>
+        <li><a href="./Firebase/Main/index.html">Firebase</a></li>
         <!-- VS Code Commands -->
         <li><a href="./VS Code/index.html">VS code</a></li>
         <!-- Git Commands -->
