--- a/Firebase/Installation/index.html
+++ b/Firebase/Installation/index.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Firebase</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="shortcut icon" href="../Source/command.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="./command.svg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1 style="text-align: center;"><a href="../index.html" style="text-decoration: none;color: black;font-family: 'Akshar', sans-serif;">CMDs</a></h1>
-    <h3><a href="./Issues/index.html">Issues</a></h3>
     <ul style="list-style:decimal;line-height: 50px;">
         <li><b>Install Firebase Tools in Node JS</b>
             <ul style="list-style:none;line-height: 30px;">
