--- a/Firebase/Main/index.html
+++ b/Firebase/Main/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Firebase-Issues</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Commands</title>
     <link rel="shortcut icon" href="./command.svg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 style="text-align: center;"><a href="../index.html" style="text-decoration: none;color: black;font-family: 'Akshar', sans-serif;">CMDs</a></h1>
-    <ul style="list-style:decimal;line-height: 50px;">
-        <li><a href="./1/index.html">Running scripts is disabled on this system visual studio code</a></li>
+    <h1 style="text-align: center;font-family: 'Akshar', sans-serif;">CMDs</h1>
+    <ul style="list-style:decimal;line-height: 30px;">
+        <!-- Issues -->
+        <li><a href="../Issues/Main/index.html">Issues</a></li>
+        <!-- NodeJS Install Firebase -->
+        <li><a href="../Installation/index.html">NodeJS Install Firebase</a></li>
     </ul>
-    
     
 </body>
 </html>
